<resources>
    <string name="app_name">Utradia</string>
    <string name="facebook_app_id">249785295567903</string>
    <string name="google_map_key">AIzaSyDEYd7C-lwDmgGMKRozDJezeasUuvahBZs</string>
    <string name="pushwoosh_appId">37138-327A0</string>
    <string name="fcm_senderID">125162290311</string>
    <string name="default_notification_channel_id">utradia</string>
    <string name="about_url">http://treatit.online/PrivacyPolicy</string>
    <string name="user_terms_url">http://treatit.online/PrivacyPolicy</string>
    <string name="warning_field_empty">This field cannot be empty</string>
    <string name="warning_email">Please enter a valid email!</string>
    <string name="warning_password_length">Password requires a minimum of 8 alphanumeric characters.</string>
    <string name="fillallemptyfields">Please fill all empty fields</string>
    <string name="password_empty_error">Please enter password</string>
    <string name="toast_network_not_available">Please check your internet connection!</string>
    <string name="passworderror">Password requires a minimum of 8 alphanumeric characters.</string>
    <string name="password_valid">Password must have at least one uppercase alphabet, one lowercase alphabet, one numeric character and minimum of 8 characters</string>
    <string name="phoneerror">Phone number should not be less than 10 digits</string>
    <string name="newpassword">New password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="currntpassword">Current password</string>
    <string name="currentpassworderror">Please enter current password</string>
    <string name="newpassworderror">Please enter new password</string>
    <string name="confirmpassworderror">Please confirm your password</string>
    <string name="passworddoesnotmatch">Password does not match.</string>
    <string name="correctPass">Please enter correct password</string>
    <string name="send_mail">Send email</string>
    <string name="no_email_client">No email client found!</string>
    <string name="warning_invalid_link">Invalid website link!</string>
    <string name="warning_play_services">Google Play Services are missing from your device!</string>
    <string name="selection">Select type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="touch_to_start">Touch to Start</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up_here">New User? Sign up here</string>
    <string name="retype_password">Retype Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="or">OR</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="follow_us_on_utradia">Follow us on uTradia</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about_us">About Us</string>
    <string name="user_terms">User Terms</string>
    <string name="customer_service">Customer Service</string>
    <string name="Settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="coupons">Coupons</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="email_title">We are not able to access your email due to privacy concerns. \n Please provide your email id. </string>
    <string name="shops">Shops</string>
    <string name="search_for_shops">Search for shops</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_email_id">Please enter your registered email Id.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="my_account">My Account</string>
    <string name="your_personal_data">Your Personal Data</string>
    <string name="birthday">Birthday</string>
    <string name="_233">+233</string>
    <string name="save_changes">Save Changes</string>
    <string name="address">Address</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="sponsors">Sponsors</string>
    <string name="no_shops_found">No Shops Found</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout">Logout</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="time">Time</string>
    <string name="no_events">No Events</string>
    <string name="call">Call</string>
    <string name="join">Join</string>
    <string name="unjoin">Unjoin</string>
    <string name="attendees">Attendees</string>
    <string name="explanation_multiple_request">We are requesting the permission as it is necessary for the app to perform it\'s functionality.\nPlease select \"Grant Permission\" to try again and \"Cancel \" to exit.</string>
    <string name="explanation_multiple_settings">You have rejected the necessary permission for the application. As it is necessary for the app to perform you need to enable it in the settings of your device.\nPlease select \"Go to settings\" to go to application settings in your device and \"Cancel \" to exit the application.</string>
    <string name="action_grant_permission">Grant Permission</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_goto_settings">Go to settings</string>
    <string name="health_beauty">Health &amp; Beauty</string>
    <string name="home_furniture">Home &amp; Furniture</string>
    <string name="baby_kids">Baby &amp; kids</string>
    <string name="categories">Categories</string>
    <string name="all_categories">All Categories</string>
    <string name="no_items">No Items</string>
    <string name="no_products_found">No Products Found</string>
    <string name="search_for_products">Search for Products</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="most_popular">Most Popular</string>
    <string name="overview">Overview</string>
    <string name="ongoing">Sale Now</string>
    <string name="upcoming">Tomorrow</string>
    <string name="description">Description</string>
    <string name="rating_reviews">Rating &amp; Reviews</string>
    <string name="shipping_return">Shipping &amp; Return</string>
    <string name="buy_now">Buy Now</string>
    <string name="flash_sales">Flash Sales</string>
    <string name="ending_in">Ending in</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="no_reviews_and_ratings">No Reviews and Ratings</string>
    <string name="no_information">No Information</string>
    <string name="no_items_in_your_wishlist">No Items in your Wishlist</string>
    <string name="store_detail">Store Details</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="more">MORE</string>
    <string name="product_options">Product Options</string>
    <string name="choose_color">Choose color</string>
    <string name="select_size_int_l">Select Size (INT\'L)</string>
    <string name="confirm">Confirm</string>
    <string name="amount_you_want_to_buy">Amount you want to buy</string>
    <string name="starting_in">Starting in</string>
    <string name="cart">Cart</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="total">Total:</string>
    <string name="estimated_total">Estimated Total:</string>
    <string name="apply_voucher_code">Apply Voucher Code</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_move_this_item_to_your_wishlist">Are you sure you want to move this item to your Wishlist?</string>
    <string name="save_for_later">Save for later</string>
    <string name="sold">Sold</string>
    <string name="no_items_in_your_cart">No Items in your cart</string>
    <string name="catalogue">Catalogue</string>
    <string name="location">Location</string>
    <string name="shop_info">Shop Info</string>
    <string name="follow">Follow</string>
    <string name="open_hours">Open Hours</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="pincode">Pincode</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="no_address_found">No Address Found</string>
    <string name="add">Add</string>
    <string name="unfollow">UnFollow</string>
    <string name="exclusive_offers_and_updates">Exclusive Offers and Updates</string>
    <string name="receive_updates_on_your_orders">Receive updates on your orders</string>
    <string name="receive_wishlist_and_shopping_cart_updates">Receive wishlist and shopping cart updates</string>
    <string name="order_and_logistics">Order and Logistics</string>
    <string name="system_messages">System Messages</string>
    <string name="notifications_settings">Notification Settings</string>
    <string name="qty_not_available">Requested quantity not available</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="please_select_varient_first">Please select a variant</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change">Change</string>
    <string name="qty_">Qty</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="total_item_price">Total Item Price:</string>
    <string name="total_shipping_fee">Total Shipping Fee:</string>
    <string name="subtotal">Subtotal</string>
    <string name="please_enter_voucher_code">Please enter voucher code</string>
    <string name="discount">Discount:</string>
    <string name="not_deliverable_at_this_address">Not deliverable at selected address</string>
    <string name="payment">Payment</string>
    <string name="mtn_mobile_money_online">MTN Mobile Money Online</string>
    <string name="slydepay">Slydepay</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="next">Next</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="your_order_id_is">Your #Order ID is</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="standard_delivery">Standard Delivery</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="order_id">Order ID:</string>
    <string name="order_amount">Order Amount:</string>
    <string name="status">Status:</string>
    <string name="items_qty">Items Qty.</string>
    <string name="view_order">View Order</string>
    <string name="pay_now">Pay Now</string>
    <string name="write_a_review">Write a Review</string>
    <string name="processing">Processing</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
</resources>