<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_rounded"
    android:padding="@dimen/margin_2x">

    <TextView
        android:id="@+id/txtAlert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_2x"
        android:text="@string/save_for_later"
        android:textColor="@color/text_purple"
        android:textSize="@dimen/text_mediumLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_2x"
        android:text="@string/are_you_sure_you_want_to_move_this_item_to_your_wishlist"
        android:textColor="@color/appTextColor_dark"
        android:textSize="@dimen/text_mediumLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlert" />

    <TextView
        android:id="@+id/txtNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_btn_back"
        android:gravity="center"
        android:textColor="@drawable/text_select_color"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAddToWish"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="@dimen/margin_3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage"
        app:srcCompat="@drawable/ic_btn_back" />

    <TextView
        android:id="@+id/txtAddToWish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_btn_back"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textColor="@drawable/text_select_color"
        android:text="@string/yes"
        android:layout_marginStart="@dimen/margin_3x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtCancel"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>